# velmiren

./: .gitignore  README.md  pyproject.toml
.claude/research/: credential-management.md  write-helper.py
.claude/skills/design/: SKILL.md
.claude/skills/dryrun-blueprint/: SKILL.md
.claude/skills/dryrun-code/: SKILL.md
.claude/skills/dryrun-context/: SKILL.md
.claude/skills/dryrun-design/: SKILL.md
.claude/skills/dryrun-plan/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/requirement/: SKILL.md
.claude/skills/research/: SKILL.md
.claude/skills/spec/: SKILL.md
.claude/specs/mvp/: design.md  dryrun-code-1.md  dryrun-code-2.md  dryrun-design-1.md  dryrun-design-2.md  requirement.md  task.md
src/velmiren/: __main__.py  auth.py  cli.py  drive.py  errors.py  paths.py
tests/: conftest.py  test_auth.py  test_cli.py  test_drive.py  test_errors.py  test_paths.py
