[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "velmiren"
version = "0.1.0"
description = "Transport organ — secure bi-directional file transport between Velasari's PC and Kaushik's devices"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Kaushik Hazra" }
]

dependencies = [
    "click>=8.1",
    "google-auth>=2.28",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.120",
    "requests>=2.31",
]

[project.scripts]
velmiren = "velmiren.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/velmiren"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
